--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <h3>Задание 2</h3>
     <p id="yraw"></p>
     <h3>Задание 3</h3>
-    <!-- <p id="pl"></p> -->
-    <p>Открой консоль</p>
+    <ul id="task-3"></ul>
 </body>
 </html>
